# Gaus_Parallel

./: .gitignore  CMakeLists.txt  README.md  gauss.h  gauss_1d.c  gauss_1d_parallel.c  gauss_2d.c  gauss_2d_parallel.c  gen_matrix.c  main.c  main_mpi.c  matrix_io.c  test.c
